--- a/bushidotechFront/index.html
+++ b/bushidotechFront/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/logobusN.png" type="image/png">
+    <link rel="icon" href="./src/assets/LogobusN.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Venta Electronica</title>
+    <title>BushidoTech</title>
   </head>
   <body>
     <div id="root"></div>
